k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  namespace: test
  labels:
    app: $APP_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      imagePullSecrets:
        - name: dg-registry-key
      containers:
        - name: $APP_NAME
          image: $IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi" 
              cpu: "200m"      
            requests:
              memory: "128Mi"  
              cpu: "100m"
