k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME-service
  namespace: test
spec:
  selector:
    app: $APP_NAME
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
